--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+
+    <!-- MySQL ドライバ -->
+    <dependency>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
+        <version>8.1.0</version>
+    </dependency>
+
     <!-- Test -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
