itankansei: 修正内容をコミット

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # アプリ名
-spring.application.name=demo
+spring.application.name=ShopSite
 
 # MySQL 接続情報
-spring.datasource.url=jdbc:mysql://localhost:3306/shopsite?useSSL=false&serverTimezone=Asia/Tokyo
+spring.datasource.url=jdbc:mysql://localhost:3306/shopsite_db?useSSL=false&serverTimezone=Asia/Tokyo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
