--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # アプリ名
-spring.application.name=ShopSite
+spring.application.name=shopSite
 
 # MySQL 接続情報
 spring.datasource.url=jdbc:mysql://localhost:3306/shopsite_db?useSSL=false&serverTimezone=Asia/Tokyo
